@@ -11,8 +11,15 @@
 		<license>GNU GENERAL PUBLIC LICENSE. Version 2, June 1991</license>
 		<source></source>
         <summary lang="en_GB">Live streaming and magazines from Hessischer Rundfunk TV</summary>
-        <description lang="en_GB">This add-on provides access to the HR TV live stream and some local cultural shows.</description>
+        <description lang="en_GB">This add-on provides access to the HR TV live stream and some local food/cultural magazine shows.</description>
         <language>de</language>
+        <news>
+1.1.0
+- Added configurable fetching/displaying of 'Playing now' info in live stream menu item
+  (see 'Settings' to enable or disable fetching/displaying)
+- Added more magazine content
+  (see 'Settings' to disable or enable certain shows showing up in list)
+        </news>
         <assets>
             <icon>icon.png</icon>
             <fanart>fanart.jpg</fanart>
