@@ -5,5 +5,8 @@
 - Implemented change requests from pull request
 
 1.1.0
-- Added live program guide info before streaming
-  and ability to cancel.
+- Added configurable fetching/displaying of 'Playing now' info in live stream menu item
+  (see 'Settings' to enable or disable fetching/displaying)
+- Added more magazine content
+  (see 'Settings' to disable or enable certain shows showing up in list)
+  
